--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,7 +23,7 @@ jobs:
           pwd             # /home/runner/work/chethan-trial-1/chethan-trial-1
           npm build
           ls -lrt
-          cd projects/private-components-lib
+          cd projects/components-lib
           pwd             # /home/runner/work/chethan-trial-1/chethan-trial-1/projects/components-lib
           ls -lrt
           npm pack
