--- a/projects/components-lib/package.json
+++ b/projects/components-lib/package.json
@@ -1,14 +1,14 @@
 {
   "name": "@werchethandb/components-lib",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "peerDependencies": {
     "@angular/common": "^12.2.0",
     "@angular/core": "^12.2.0"
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:werchethandb/chethan-trial-1.git"
-  },
+	    "url": "https://github.com/werchethandb/chethan-trial-1.git"
+	  },
   "dependencies": {
     "tslib": "^2.3.0"
   }
