--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,19 +19,20 @@ jobs:
           scope: '@werchethandb'
           
       - name: Experiment
-        run: npm build
-             ls -alrt
+      - run: npm build
+      - run: ls -alrt
+      - run: find /home/runner/work/chethan-trial-1/chethan-trial-1/ -name "*.tgz"
+             
         
-      - name: build
-        run: |
-          pwd             # /home/runner/work/chethan-trial-1/chethan-trial-1
-          npm build
-          ls -alrt
-          cd ./dist/components-lib
-          pwd             # /home/runner/work/chethan-trial-1/chethan-trial-1/dist/components-lib
-          ls -alrt
-          npm pack
-      # - run: npm ci
+      #  - name: build
+#         run: |
+#           pwd             # /home/runner/work/chethan-trial-1/chethan-trial-1
+#           npm build
+#           ls -alrt
+#           cd ./dist/components-lib
+#           pwd             # /home/runner/work/chethan-trial-1/chethan-trial-1/dist/components-lib
+#           ls -alrt
+#           npm pack
 
   publish-gpr:
     runs-on: ubuntu-latest
