--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,7 +19,7 @@ jobs:
           scope: '@werchethandb'
           
       - name: Experiment
-      - run: |
+        run: |
             npm build
             ls -alrt
             find /home/runner/work/chethan-trial-1/chethan-trial-1/ -name "*.tgz"        
