--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,7 +21,7 @@ jobs:
       - run: pwd
       - run: npm build
       - run: ls -alrt
-      - run: find . -name "*.tgz"        
+      - run: find . -name *.tgz 
       - run: pwd
 
 #  - name: build
