--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,7 +19,7 @@ jobs:
           scope: '@werchethandb'
           
       - run: pwd
-      - run: npm run build && npm run pack
+      - run: npm run build
       - run: ls -alrt
       - run: find . -name *.tgz 
       - run: pwd
