--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,9 +10,7 @@ on:
 jobs:
   quality:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
+    permissions: read-all|write-all
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v3
