--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,4 +1,7 @@
-name: Quality check and Publish package to GitHub Packages
+# This workflow will run tests using node and then publish a package to GitHub Packages when a release is created
+# For more information see: https://help.github.com/actions/language-and-framework-guides/publishing-nodejs-packages
+
+name: Node.js Package
 
 on:
   push:
@@ -8,62 +11,29 @@ on:
     branches: '*'
 
 jobs:
-  quality:
+  build:
     runs-on: ubuntu-latest
-    permissions: write-all
     steps:
-      - uses: actions/checkout@v1
-
-      - name: Cache node modules
-        uses: actions/cache@v1
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
-      - name: Node ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
-        with:
-          node-version: ${{ matrix.node-version }}
-      - name: npm install and npm run build
-        run: |
-          npm i
-          npm run build:prod
-
-#  - name: build
-#         run: |
-#           pwd             # /home/runner/work/chethan-trial-1/chethan-trial-1
-#           npm build
-#           ls -alrt
-#           cd ./dist/components-lib
-#           pwd             # /home/runner/work/chethan-trial-1/chethan-trial-1/dist/components-lib
-#           ls -alrt
-#           npm pack
+          node-version: 16
+      - run: npm ci
 
   publish-gpr:
+    needs: build
     runs-on: ubuntu-latest
     permissions:
       contents: read
       packages: write
-    if: ${{ github.ref == 'refs/heads/main' }}
-    needs: [quality]
     steps:
       - uses: actions/checkout@v3
-      # Setup .npmrc file to publish to GitHub Packages
       - uses: actions/setup-node@v3
         with:
-          node-version: '14.x'
-          registry-url: 'https://npm.pkg.github.com'
-          scope: '@werchethandb'
-      - run: |
-          pwd             # /home/runner/work/chethan-trial-1/chethan-trial-1
-          npm build
-          ls -alrt
-          cd ./dist/components-lib
-          pwd             # /home/runner/work/chethan-trial-1/chethan-trial-1/dist/components-lib
-          ls -alrt
-          npm pack
-          npm publish
-
+          node-version: 16
+          scope: ${{ github.repository_owner }}
+          registry-url: https://npm.pkg.github.com/
+      - run: npm ci
+      - run: npm publish
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
