--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,6 +19,7 @@ jobs:
         with:
           node-version: 14
       - run: npm config list
+      - run: npm i
     env:
         NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
 
